{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "a0686ce3-a42c-4451-a4a8-25fdb14a3bbc",
            "actions": [
                {
                    "name": "LookInput",
                    "type": "Value",
                    "id": "db6ba486-5944-4d30-9e07-262dfb12a7d0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementInput",
                    "type": "Value",
                    "id": "da64b3a8-1637-4df1-a5dd-6e38be26c747",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "26b9bdd2-8225-4a0f-b2ed-0b352ba2b6ee",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "88cc9e70-b27c-4317-bac0-47b01dd67b17",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2e09db4e-4b25-491d-8e6a-0d10ebf7de72",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dee06f87-99c9-49d8-8495-780b43972d94",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3e234753-d641-402d-9d93-ae274d3ceb47",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "43ab2969-3811-4293-8412-14e45082064a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}